# devpi-constrained

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  ruff-strict.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
src/devpi_constrained/: main.py
src/devpi_constrained/tests/: test_constrained.py
