[devpi:upload]
formats = sdist.tgz,bdist_wheel

[metadata]
name = devpi-constrained
description = "devpi-constrained: an index for devpi-server that provides a constrained list of packages from it's bases"
long_description = file: README.rst, CHANGELOG.rst
version = attr: devpi_constrained.__version__
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options]
install_requires =
    devpi-common
    devpi-server>=5.1.0,!=5.4
package_dir =
    =src
packages =
    devpi_constrained
python_requires = >=3.5
zip_safe = True


[options.entry_points]
devpi_server =
    devpi-constrained = devpi_constrained.main
