[metadata]
name = devpi_constrained
version = attr: devpi_constrained.__version__
description = "devpi-constrained: an index for devpi-server that provides a constrained list of packages from it's bases"
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities

[options]
packages =
    devpi_constrained
install_requires =
    devpi-common
    devpi-server>=5.1.0
python_requires = >=3.5
package_dir =
    =src
zip_safe = True

[options.entry_points]
devpi_server =
    devpi-constrained = devpi_constrained.main

[devpi:upload]
formats = sdist.tgz,bdist_wheel
