[devpi:upload]
formats = sdist.tgz,bdist_wheel

[metadata]
name = devpi-constrained
description = "devpi-constrained: an index for devpi-server that provides a constrained list of packages from it's bases"
long_description = file: README.rst, CHANGELOG.rst
url = https://github.com/fschulze/devpi-constrained
author = Florian Schulze
author_email = mail@florian-schulze.net
version = attr: devpi_constrained.__version__
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy


[options]
install_requires =
    devpi-common
    devpi-server>=6.2.0
package_dir =
    =src
packages =
    devpi_constrained
python_requires = >=3.7
zip_safe = True


[options.entry_points]
devpi_server =
    devpi-constrained = devpi_constrained.main
